@@ -1,2 +1,3 @@
 TODO items.
 o use real entropy to make random (ID, port) numbers more random.
+o in production mode, do not free memory on exit. In debug mode, test leaks.
