@@ -1,3 +1,8 @@
+2 March 2007: Wouter
+	- do not compile fork funcs unless needed. Otherwise will give
+	  type errors as their typedefs have not been enabled.
+	- log shows thread numbers much more nicely (and portably).
+
 1 March 2007: Wouter
 	- Signals, libevent and threads work well, with libevent patch and
 	  changes to code (close after event_del).
